syntax = "proto3";

package calculator;

service Calculator {
  rpc Sum(SumRequest) returns (SumResponse) {}
  rpc PrimeNumberComposition(PrimeNumberCompositionRequest) returns (stream PrimeNumberDecompositionResponse);
}

message PrimeNumberCompositionRequest {
    int32 prime_factor = 1;
    int32 times = 2;
}

message PrimeNumberDecompositionResponse {
    int32 result = 1;
}

message SumRequest {
  int32 a = 1;
  int32 b = 2;
}
message SumResponse {
  int32 result = 1;
}


