syntax = "proto3";

package greeter;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}

  // streaming API
  rpc GreetManyTimes (GreetManyTimesRequest) returns (stream GreetManyTimesResponse) {};
}

message GreetManyTimesRequest{
  Greeting greeting = 1;
};

message GreetManyTimesResponse{
  string result = 1;
};

message Greeting{
  string first_name = 1;
  string last_name = 2;

}
// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}
